--- a/RealTime-Chat/RealTime-Chat.csproj
+++ b/RealTime-Chat/RealTime-Chat.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>RealTime_Chat</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
+  </ItemGroup>
+
 </Project>
